--- a/styles/global.css
+++ b/styles/global.css
@@ -1,27 +1,127 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  line-height: 1.6;
-  font-size: 18px;
+    line-height: 1.6;
+    font-size: 18px;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 a {
-  color: #0070f3;
-  text-decoration: none;
+    color: #0070f3;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 img {
-  max-width: 100%;
-  display: block;
+    max-width: 100%;
+    display: block;
 }
+
+
+@keyframes traceTransparency {
+    0% {
+        stroke-opacity: 0;
+        stroke-width: 1;
+    }
+    60% {
+        stroke-opacity: 0.5;
+        stroke-width: 1;
+    }
+    70% {
+        stroke-opacity: 1;
+        stroke-width: 3;
+    }
+    80% {
+        stroke-opacity: 0;
+        stroke-width: 1;
+    }
+    90% {
+        stroke-opacity: 1;
+        stroke-width: 5;
+    }
+    100% {
+        stroke-opacity: 0;
+    }
+}
+
+.flashingTrace {
+    animation-name: traceTransparency;
+    /*animation-duration: 5s;*/
+    animation-iteration-count: infinite;
+    transform: translateZ(0); /* force GPX to reduce CPU usage */
+    /*animation-direction: alternate;*/
+}
+
+.flashingTrace_delay_0 {
+    animation-delay: 0s;
+}
+
+.flashingTrace_duration_0 {
+    animation-duration: 5s;
+}
+
+.flashingTrace_delay_1 {
+    animation-delay: 1s;
+}
+
+.flashingTrace_duration_1 {
+    animation-duration: 6.1s;
+}
+
+.flashingTrace_delay_2 {
+    animation-delay: 2s;
+}
+
+.flashingTrace_duration_2 {
+    animation-duration: 5.2s;
+}
+
+.flashingTrace_delay_3 {
+    animation-delay: 3s;
+}
+
+.flashingTrace_duration_3 {
+    animation-duration: 5.3s;
+}
+
+.flashingTrace_delay_4 {
+    animation-delay: 4s;
+}
+
+.flashingTrace_duration_4 {
+    animation-duration: 4.3s;
+}
+
+.flashingTrace_delay_5 {
+    animation-delay: 5s;
+}
+
+.flashingTrace_duration_5 {
+    animation-duration: 3.5s;
+}
+
+.flashingTrace_delay_6 {
+    animation-delay: 1.5s;
+}
+
+.flashingTrace_duration_6 {
+    animation-duration: 5.6s;
+}
+
+.flashingTrace_delay_7 {
+    animation-delay: 2.5s;
+}
+
+.flashingTrace_duration_7 {
+    animation-duration: 6.3s;
+}
+
