--- a/styles/global.css
+++ b/styles/global.css
@@ -27,7 +27,33 @@ img {
 }
 
 
-@keyframes traceTransparency {
+@keyframes traceTransparencyA {
+    0% {
+        stroke-opacity: 0;
+        stroke-width: 1;
+    }
+    60% {
+        stroke-opacity: 0.5;
+        stroke-width: 1;
+    }
+    70% {
+        stroke-opacity: 1;
+        stroke-width: 3;
+    }
+    80% {
+        stroke-opacity: 0;
+        stroke-width: 1;
+    }
+    90% {
+        stroke-opacity: 1;
+        stroke-width: 5;
+    }
+    100% {
+        stroke-opacity: 0;
+    }
+}
+
+@keyframes traceTransparencyB {
     0% {
         stroke-opacity: 0;
         stroke-width: 1;
@@ -53,10 +79,21 @@ img {
     }
 }
 
+.flashingTrace.flashingTraceB {
+    animation-name: traceTransparencyB;
+    animation-duration: 2s;
+}
+
+.flashingTrace.flashingTraceA {
+    animation-name: traceTransparencyA;
+    animation-duration: 3s;
+}
+
 .flashingTrace {
-    animation-name: traceTransparency;
-    /*animation-duration: 5s;*/
-    animation-iteration-count: infinite;
+    stroke-opacity: 0;
+    /*animation-name: traceTransparency;*/
+    /*!*animation-duration: 5s;*!*/
+    /*animation-iteration-count: infinite;*/
     transform: translateZ(0); /* force GPX to reduce CPU usage */
     /*animation-direction: alternate;*/
 }
