--- a/styles/global.css
+++ b/styles/global.css
@@ -49,7 +49,8 @@ img {
         stroke-width: 5;
     }
     100% {
-        stroke-opacity: 0;
+        stroke-width: 1;
+        stroke-opacity: 0.1;
     }
 }
 
@@ -75,7 +76,8 @@ img {
         stroke-width: 8;
     }
     100% {
-        stroke-opacity: 0;
+        stroke-width: 1;
+        stroke-opacity: 0.1;
     }
 }
 
@@ -90,7 +92,8 @@ img {
 }
 
 .flashingTrace {
-    stroke-opacity: 0;
+    stroke-width: 1;
+    stroke-opacity: 0.2;
     /*animation-name: traceTransparency;*/
     /*!*animation-duration: 5s;*!*/
     /*animation-iteration-count: infinite;*/
